Revert "Map gradle dependency and configuration attributes to openrewirte attributes. (#44)"
This reverts commit ce2a5f00c99630bdb43cc3902c9d12843fc9b5eb.